--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,14 @@
       content="Web site created using create-react-app"
     />
     <!-- add -->
-
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <!-- add -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
